Separate file for JSX

--- a/ReactApp/ReactJSWebApp/ReactJSWebApp/index.html
+++ b/ReactApp/ReactJSWebApp/ReactJSWebApp/index.html
@@ -12,17 +12,6 @@
 
     <div id="app"></div>
 
-    <script type="text/babel">
-        class App extends React.Component {
-            render() {
-                return (
-                    <div>Hello from the React Side</div>
-                    );
-            }
-        };
-
-        ReactDOM.render(<App />, document.getElementById('app'));
-    </script>
-
+    <script src="app.jsx" type="text/babel" />
 </body>
 </html>
